2013-10-11  Eric Hodel  <drbrain@segment7.net>

	* lib/rake:  Update to rake 10.1.0
	* bin/rake:  ditto.
	* test/rake:  ditto.

	* NEWS:  Update NEWS to include rake 10.1.0 and links to release notes.

Sat Oct 12 03:26:04 2013  Koichi Sasada  <ko1@atdot.net>

	* class.c, variable.c, gc.c (rb_class_tbl): removed.

	* vm.c, vm_core.h (rb_vm_add_root_module): added to register as a
	  defined root module or class.
	  This guard helps mark miss from defined classes/modules they are
	  only referred from C's global variables in C-exts.
	  Basically, it is extension's bug.
	  Register to hash object VM has.
	  Marking a hash objects allows generational GC supports.

	* gc.c (RGENGC_PRINT_TICK): disable (revert).

Sat Oct 12 03:24:49 2013  Koichi Sasada  <ko1@atdot.net>

	* vm_method.c (rb_gc_mark_unlinked_live_method_entries):
	  revert last commit to introduce debug prints.

Fri Oct 11 21:05:19 2013  Koichi Sasada  <ko1@atdot.net>

	* internal.h, parse.y: use `full_mark' instead of `full_marking'.

Fri Oct 11 20:58:16 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: use terminology `full_mark' instead of `minor_gc'
	  in mark functions.

Fri Oct 11 20:46:09 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: use __GNUC__ instead of __GCC__.

Fri Oct 11 20:35:59 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c, parse.y: support generational Symbol related marking.
	  Each symbols has String objects respectively to represent
	  Symbols.
	  These objects are marked only when:
	  * full marking
	  * new symbols are added
	  This hack reduce symbols (related strings) marking time.
	  For example, on my Linux environment, the following code
	    "20_000_000.times{''}"
	  with 40k symbols (similar symbol number on Rails 3.2.14 app,
	  @jugyo tells me) boosts, from 7.3sec to 4.2sec.

	* internal.h: change prototype of rb_gc_mark_symbols().

Fri Oct 11 19:27:22 2013  Akinori MUSHA  <knu@iDaemons.org>

	* misc/ruby-electric.el: Import ruby-electric.el 2.0.1 which fixes