@@ -2221,11 +2221,22 @@ kwmerge_i(VALUE key, VALUE value, VALUE hash)
     return ST_CONTINUE;
 }
 
-static VALUE
-m_core_hash_merge_kwd(VALUE recv, VALUE hash, VALUE kw)
+static int
+kwcheck_i(VALUE key, VALUE value, VALUE hash)
 {
+    if (!SYMBOL_P(key)) Check_Type(key, T_SYMBOL);
+    return ST_CONTINUE;
+}
+
+static VALUE
+m_core_hash_merge_kwd(int argc, VALUE *argv, VALUE recv)
+{
+    VALUE hash, kw;
+    rb_check_arity(argc, 1, 2);
+    hash = argv[0];
+    kw = argv[argc-1];
     kw = rb_convert_type(kw, T_HASH, "Hash", "to_hash");
-    rb_hash_foreach(kw, kwmerge_i, hash);
+    rb_hash_foreach(kw, argc < 2 ? kwcheck_i : kwmerge_i, hash);
     return hash;
 }
 
@@ -2301,7 +2312,7 @@ Init_VM(void)
     rb_define_method_id(klass, id_core_hash_from_ary, m_core_hash_from_ary, 1);
     rb_define_method_id(klass, id_core_hash_merge_ary, m_core_hash_merge_ary, 2);
     rb_define_method_id(klass, id_core_hash_merge_ptr, m_core_hash_merge_ptr, -1);
-    rb_define_method_id(klass, id_core_hash_merge_kwd, m_core_hash_merge_kwd, 2);
+    rb_define_method_id(klass, id_core_hash_merge_kwd, m_core_hash_merge_kwd, -1);
     rb_define_method_id(klass, idProc, rb_block_proc, 0);
     rb_define_method_id(klass, idLambda, rb_block_lambda, 0);
     rb_obj_freeze(fcore);
